@@ -1,23 +1,20 @@
 FROM ubuntu:latest
 
-# Install Ubuntu 16.04.01 LTS (Xenial Xerus)
-# Install python 2.7.12 and pip
+# Install Ubuntu 18.04.01 LTS (Bionic Beaver)
+# Install python 2.7 and pip
+# Install python 3.6 and pip3
 # Install HDF5
 # Install curl (for retrieving GMTK)
 RUN apt-get update && apt-get install -y \
     python \
     python3 \
-    python-pip \
-    libhdf5-serial-dev \
+    python2-pip \
+    python3-pip \
+    libhdf5-dev \
     hdf5-tools \
     curl \
 && rm -rf /var/lib/apt/lists/*
 # RUN apt-get install -y libbz2-dev liblzo2-dev libblosc-dev libatlas-dev liblapack-dev
-
-# Configure HDF5 include and lib directories
-ENV C_INCLUDE_PATH /usr/include/hdf5/serial
-ENV LD_LIBRARY_PATH /usr/lib/x86_64-linux-gnu/hdf5/serial
-ENV HDF5_DIR /usr/lib/x86_64-linux-gnu/hdf5/serial
 
 # Install GMTK
 # Downloads location: http://melodi.ee.washington.edu/cgi-bin/gmtk-download.pl
@@ -36,7 +33,12 @@ RUN curl -SL http://melodi.ee.washington.edu/downloads/gmtk/gmtk-1.4.4.tar.gz \
 # Update pip
 # Install mercurial for hgtools (needed to install for testing)
 # Install PyFlakes for testing
-RUN pip install --upgrade \ 
+RUN python2 -m pip install --upgrade \ 
+    pip \
+    setuptools \
+    mercurial \
+    pyflakes
+RUN python3 -m pip install --upgrade \
     pip \
     setuptools \
     mercurial \
