@@ -1,14 +1,15 @@
 #!/usr/bin/env python
 from __future__ import absolute_import, division, with_statement
 
-from six import string_types
 __version__ = "$Revision$"
 
 # Copyright 2009 Michael M. Hoffman <michael.hoffman@utoronto.ca>
 
-from six.moves.configparser import RawConfigParser
 from cStringIO import StringIO
 import sys
+
+from six import string_types
+from six.moves.configparser import RawConfigParser
 
 CONFIGPARSER_SECTION = "all"
 
