@@ -1,6 +1,7 @@
 2.0.3:
 * segway: fix fatal TypeError during --dry-run
 * segway: Added compatibility for python 3
+* segway: No longer requires forked-path, now needs path.py>=10
 
 2.0.2:
 * segway: fix window selection when using multiple genomedata archives
